--- a/CódigoFuente/Bitacoras/Clases.csproj
+++ b/CódigoFuente/Bitacoras/Clases.csproj
@@ -61,6 +61,8 @@
     <Compile Include="Models\EntradaRegistroEvento.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\BgPlantillaUtil.cs" />
+    <Compile Include="Util\BG_IHS_Origen.cs" />
+    <Compile Include="Util\BG_IHS_tipo_demanda.cs" />
     <Compile Include="Util\BG_Status.cs" />
     <Compile Include="Util\DocumentosProcesos.cs" />
     <Compile Include="Util\GV_solicitud_estatus.cs" />
