--- a/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
+++ b/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
@@ -306,6 +306,9 @@
     <Compile Include="Controllers\IT_asignacion_softwareController.cs" />
     <Compile Include="Controllers\IT_carpetas_redController.cs" />
     <Compile Include="Controllers\IT_comunicaciones_tipoController.cs" />
+    <Compile Include="Controllers\IT_equipos_checklistController.cs" />
+    <Compile Include="Controllers\IT_equipos_checklist_actividadesController.cs" />
+    <Compile Include="Controllers\IT_equipos_checklist_categoriasController.cs" />
     <Compile Include="Controllers\IT_hardware_tipoController.cs" />
     <Compile Include="Controllers\IT_internet_tipoController.cs" />
     <Compile Include="Controllers\IT_inventory_cellular_lineController.cs" />
@@ -487,6 +490,18 @@
     <Compile Include="Models\IT_comunicaciones_tipo.cs">
       <DependentUpon>NuevoPortalModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\IT_equipos_checklist.cs">
+      <DependentUpon>NuevoPortalModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\IT_equipos_checklist_actividades.cs">
+      <DependentUpon>NuevoPortalModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\IT_equipos_checklist_categorias.cs">
+      <DependentUpon>NuevoPortalModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\IT_equipos_rel_checklist_actividades.cs">
+      <DependentUpon>NuevoPortalModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\IT_hardware_tipo.cs">
       <DependentUpon>NuevoPortalModel.tt</DependentUpon>
     </Compile>
@@ -591,6 +606,9 @@
     <Compile Include="Models\MetadataModels\IT_asignacion_hardwareMetadata.cs" />
     <Compile Include="Models\MetadataModels\IT_asignacion_hardware_rel_itemsMetadata.cs" />
     <Compile Include="Models\MetadataModels\IT_asignacion_softwareMetadata.cs" />
+    <Compile Include="Models\MetadataModels\IT_equipos_checklistMetadata.cs" />
+    <Compile Include="Models\MetadataModels\IT_equipos_checklist_actividadesMetadata.cs" />
+    <Compile Include="Models\MetadataModels\IT_equipos_checklist_categoriasMetadata.cs" />
     <Compile Include="Models\MetadataModels\IT_internet_tipoMetadata.cs" />
     <Compile Include="Models\MetadataModels\IT_inventory_cellular_lineMetadata.cs" />
     <Compile Include="Models\MetadataModels\IT_inventory_hardware_typeMetadata.cs" />
@@ -696,8 +714,10 @@
       <DependentUpon>NuevoPortalModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Paginacion.cs" />
+    <Compile Include="Models\PDFHandlers\FooterEventHandlerPDF_IT_checklist_equipos.cs" />
     <Compile Include="Models\PDFHandlers\FooterEventHandlerPDF_IT_Mantenimiento.cs" />
     <Compile Include="Models\PDFHandlers\FooterEventHandlerPDF_Responsiva.cs" />
+    <Compile Include="Models\PDFHandlers\HeaderEventHandlerPDF_IT_checklist_equipos.cs" />
     <Compile Include="Models\PDFHandlers\HeaderEventHandlerPDF_Responsiva_IT_Mantenimiento.cs" />
     <Compile Include="Models\PDFHandlers\HeaderEventHandlerPDF_Responsiva.cs" />
     <Compile Include="Models\PFA.cs">
@@ -7248,6 +7268,22 @@
     <Content Include="Views\IT_site_actividades\Edit.cshtml" />
     <Content Include="Views\IT_site_actividades\Enable.cshtml" />
     <Content Include="Views\IT_site_actividades\Index.cshtml" />
+    <Content Include="Views\IT_equipos_checklist\Create.cshtml" />
+    <Content Include="Views\IT_equipos_checklist\Details.cshtml" />
+    <Content Include="Views\IT_equipos_checklist\Edit.cshtml" />
+    <Content Include="Views\IT_equipos_checklist\Index.cshtml" />
+    <Content Include="Views\IT_equipos_checklist_categorias\Create.cshtml" />
+    <Content Include="Views\IT_equipos_checklist_categorias\Details.cshtml" />
+    <Content Include="Views\IT_equipos_checklist_categorias\Edit.cshtml" />
+    <Content Include="Views\IT_equipos_checklist_categorias\Index.cshtml" />
+    <Content Include="Views\IT_equipos_checklist_categorias\Enable.cshtml" />
+    <Content Include="Views\IT_equipos_checklist_categorias\Disable.cshtml" />
+    <Content Include="Views\IT_equipos_checklist_actividades\Create.cshtml" />
+    <Content Include="Views\IT_equipos_checklist_actividades\Details.cshtml" />
+    <Content Include="Views\IT_equipos_checklist_actividades\Edit.cshtml" />
+    <Content Include="Views\IT_equipos_checklist_actividades\Index.cshtml" />
+    <Content Include="Views\IT_equipos_checklist_actividades\Disable.cshtml" />
+    <Content Include="Views\IT_equipos_checklist_actividades\Enable.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
