2022-10-20 Se agrega primera version de export xls Budget

--- a/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
+++ b/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
@@ -7265,6 +7265,7 @@
     <Content Include="Views\BG_IHS_rel_segmentos\Details.cshtml" />
     <Content Include="Views\BG_IHS_rel_segmentos\Edit.cshtml" />
     <Content Include="Views\BG_IHS_rel_segmentos\Index.cshtml" />
+    <Content Include="Views\BG_IHS_item\CargaDemandaCliente.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
