--- a/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
+++ b/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
@@ -282,6 +282,7 @@
     <Compile Include="Controllers\AreasController.cs" />
     <Compile Include="Controllers\BG_CentroCostoController.cs" />
     <Compile Include="Controllers\BG_CuentasSAPController.cs" />
+    <Compile Include="Controllers\BG_IHS_combinacionController.cs" />
     <Compile Include="Controllers\BG_IHS_itemController.cs" />
     <Compile Include="Controllers\BG_IHS_regionesController.cs" />
     <Compile Include="Controllers\BG_IHS_rel_regionesController.cs" />
@@ -587,6 +588,7 @@
     <Compile Include="Models\log_inicio_sesion.cs">
       <DependentUpon>NuevoPortalModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\MetadataModels\BG_IHS_combinacionMetadata.cs" />
     <Compile Include="Models\MetadataModels\BG_IHS_itemMetadata.cs" />
     <Compile Include="Models\MetadataModels\BG_IHS_regionesMetadata.cs" />
     <Compile Include="Models\MetadataModels\BG_IHS_rel_cuartosMetadata.cs" />
@@ -7279,6 +7281,11 @@
     <Content Include="Views\BG_IHS_rel_segmentos\Edit.cshtml" />
     <Content Include="Views\BG_IHS_rel_segmentos\Index.cshtml" />
     <Content Include="Views\BG_IHS_item\CargaDemandaCliente.cshtml" />
+    <Content Include="Views\BG_IHS_combinacion\Create.cshtml" />
+    <Content Include="Views\BG_IHS_combinacion\Delete.cshtml" />
+    <Content Include="Views\BG_IHS_combinacion\Details.cshtml" />
+    <Content Include="Views\BG_IHS_combinacion\Edit.cshtml" />
+    <Content Include="Views\BG_IHS_combinacion\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
