--- a/CódigoFuente/Bitacoras/Clases.csproj
+++ b/CódigoFuente/Bitacoras/Clases.csproj
@@ -62,6 +62,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\BgPlantillaUtil.cs" />
     <Compile Include="Util\BG_Status.cs" />
+    <Compile Include="Util\cfdv33_tdCFDI_catCFDI.cs" />
+    <Compile Include="Util\cfdv40_tdCFDI_catCFDI.cs" />
     <Compile Include="Util\DocumentosProcesos.cs" />
     <Compile Include="Util\GV_comprobacion_estatus.cs" />
     <Compile Include="Util\GV_solicitud_estatus.cs" />
@@ -85,9 +87,11 @@
     <Compile Include="Util\PFA_Status.cs" />
     <Compile Include="Util\PM_Status.cs" />
     <Compile Include="Util\StreamUtil.cs" />
+    <Compile Include="Util\TimbreFiscalDigitalv11_tdCFDI.cs" />
     <Compile Include="Util\TimeSpanUtil.cs" />
     <Compile Include="Util\TipoRoles.cs" />
     <Compile Include="Util\UsoStrings.cs" />
+    <Compile Include="Util\XmlUtil.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
