2022-12-23 commit antes de cambio en sweetAlert

--- a/CódigoFuente/Bitacoras/Clases.csproj
+++ b/CódigoFuente/Bitacoras/Clases.csproj
@@ -66,8 +66,10 @@
     <Compile Include="Util\cfdv40_tdCFDI_catCFDI.cs" />
     <Compile Include="Util\DocumentosProcesos.cs" />
     <Compile Include="Util\GV_comprobacion_estatus.cs" />
+    <Compile Include="Util\GV_comprobacion_origen.cs" />
     <Compile Include="Util\GV_solicitud_estatus.cs" />
     <Compile Include="Util\GV_tipo_departamento.cs" />
+    <Compile Include="Util\ImpLocales.cs" />
     <Compile Include="Util\IT_equipos_actividad_estatus.cs" />
     <Compile Include="Util\IT_equipos_checklist_estatus.cs" />
     <Compile Include="Util\IT_matenimiento_Estatus.cs" />
